--- a/eas.json
+++ b/eas.json
@@ -7,22 +7,34 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
-      "node": "20.19.4"
+      "node": "20.19.4",
+      "env": {
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
+      }
     },
     "preview": {
       "distribution": "internal",
-      "node": "20.19.4"
+      "node": "20.19.4",
+      "env": {
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
+      }
     },
     "production": {
       "autoIncrement": true,
-      "node": "20.19.4"
+      "node": "20.19.4",
+      "env": {
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
+      }
     },
     "apk": {
       "android": {
         "buildType": "apk"
       },
       "distribution": "internal",
-      "node": "20.19.4"
+      "node": "20.19.4",
+      "env": {
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
+      }
     },
     "standalone-apk": {
       "android": {
@@ -30,7 +42,10 @@
       },
       "distribution": "internal",
       "developmentClient": false,
-      "node": "20.19.4"
+      "node": "20.19.4",
+      "env": {
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
+      }
     },
     "minimal-apk": {
       "android": {
@@ -40,7 +55,8 @@
       "developmentClient": false,
       "node": "20.19.4",
       "env": {
-        "NODE_ENV": "production"
+        "NODE_ENV": "production",
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
       }
     },
     "ios-simulator": {
