--- a/package.json
+++ b/package.json
@@ -27,18 +27,19 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
-    "expo": "54.0.23",
-    "expo-blur": "^15.0.7",
+    "expo": "~54.0.30",
+    "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.17",
-    "expo-device": "~8.0.9",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
     "expo-file-system": "^19.0.17",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-notifications": "~0.32.12",
-    "expo-sensors": "~15.0.7",
-    "expo-sharing": "^14.0.7",
-    "expo-status-bar": "~3.0.8",
+    "expo-font": "~14.0.10",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-notifications": "~0.32.15",
+    "expo-sensors": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-status-bar": "~3.0.9",
     "nativewind": "^2.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -49,21 +50,16 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^19.0.0",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
-  },
-  "overrides": {
-    "@types/react": "^19.0.0"
-  },
-  "resolutions": {
-    "@types/react": "^19.0.0"
   },
   "private": true
 }
