--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,3 +180,6 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+// Apply Google Services plugin for Firebase/FCM
+apply plugin: 'com.google.gms.google-services'
