--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -97,6 +97,11 @@ android {
         versionName "1.0.0"
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
+        
+        // Only include arm64-v8a and armeabi-v7a (removes x86/x86_64 - saves ~40MB)
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
+        }
     }
     signingConfigs {
         debug {
