--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -28,7 +28,8 @@ android.enablePngCrunchInReleaseBuilds=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
-reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
+# Only arm64-v8a for smaller APK (most modern devices support this)
+reactNativeArchitectures=arm64-v8a
 
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
@@ -47,15 +48,19 @@ hermesEnabled=true
 edgeToEdgeEnabled=true
 
 # Enable GIF support in React Native images (~200 B increase)
-expo.gif.enabled=true
+expo.gif.enabled=false
 # Enable webp support in React Native images (~85 KB increase)
-expo.webp.enabled=true
+expo.webp.enabled=false
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
 
-# Enable network inspector
-EX_DEV_CLIENT_NETWORK_INSPECTOR=true
+# Enable network inspector (disabled for production builds)
+EX_DEV_CLIENT_NETWORK_INSPECTOR=false
+
+# Enable minification and shrinking for release builds
+android.enableMinifyInReleaseBuilds=true
+android.enableBundleCompression=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
