--- a/eas.json
+++ b/eas.json
@@ -7,11 +7,16 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "android": {
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleDebug"
+      },
       "node": "20.19.4",
       "env": {
         "NODE_ENV": "development",
         "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
-      }
+      },
+      "channel": "development"
     },
     "preview": {
       "distribution": "internal",
@@ -31,14 +36,19 @@
     },
     "apk": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease",
+        "withoutCredentials": true
       },
       "distribution": "internal",
       "node": "20.19.4",
       "env": {
         "NODE_ENV": "production",
-        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
-      }
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1",
+        "EXPO_OPTIMIZE_SIZE": "1",
+        "EXPO_NO_DEV": "1"
+      },
+      "resourceClass": "medium"
     },
     "standalone-apk": {
       "android": {
