--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch",
     "start": "expo start",
+    "start:dev": "expo start --dev-client",
     "prestart": "npm run typecheck",
     "android": "expo run:android",
     "preandroid": "npm run typecheck",
@@ -15,6 +16,7 @@
     "lint": "tsc --noEmit && eslint . --ext .ts,.tsx",
     "clean": "powershell -Command \"Remove-Item -Recurse -Force @('android/app/.cxx', 'android/app/build', 'android/build', 'node_modules/.cache') -ErrorAction SilentlyContinue; Write-Host '✅ All builds removed!' -ForegroundColor Green\"",
     "build:clean": "npm run clean && cd android && .\\gradlew assembleRelease",
+    "build:dev": "eas build -p android --profile development",
     "build:apk": "eas build -p android --profile apk",
     "build:aab": "eas build -p android --profile production"
   },
@@ -40,6 +42,7 @@
     "expo-sensors": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
     "nativewind": "^2.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
