--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,7 +10,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -28,8 +28,7 @@ android.enablePngCrunchInReleaseBuilds=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
-# Only arm64-v8a for smaller APK (most modern devices support this)
-reactNativeArchitectures=arm64-v8a
+reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
@@ -48,19 +47,15 @@ hermesEnabled=true
 edgeToEdgeEnabled=true
 
 # Enable GIF support in React Native images (~200 B increase)
-expo.gif.enabled=false
+expo.gif.enabled=true
 # Enable webp support in React Native images (~85 KB increase)
-expo.webp.enabled=false
+expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
 
-# Enable network inspector (disabled for production builds)
-EX_DEV_CLIENT_NETWORK_INSPECTOR=false
-
-# Enable minification and shrinking for release builds
-android.enableMinifyInReleaseBuilds=true
-android.enableBundleCompression=true
+# Enable network inspector
+EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
