--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-device": "~8.0.10",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.10",
+    "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-notifications": "~0.32.15",
@@ -65,7 +66,11 @@
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^19.0.0",
     "@types/react": "~19.1.10",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
