--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "expo-notifications": "~0.32.15",
     "expo-sensors": "~15.0.8",
     "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.15",
+    "lottie-react-native": "~7.3.1",
     "nativewind": "^2.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
